did additional testing

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -7085,7 +7085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7094,7 +7094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -7103,7 +7103,7 @@
        "torch.Size([4, 64, 26, 33])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7114,7 +7114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -7123,7 +7123,7 @@
        "torch.Size([4, 64, 13, 16])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7138,22 +7138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-25-4d0be41d4551>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-4d0be41d4551>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    newnew = unpool(new, kernel_size=2, idx)\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 64, 26, 33])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "unpool = nn.MaxUnpool2d()\n",
+    "unpool = nn.MaxUnpool2d(kernel_size=2)\n",
     "\n",
-    "newnew = unpool(new, kernel_size=2, idx)\n",
+    "newnew = unpool(new, idx, output_size = torch.Size([4, 64, 26, 33]))\n",
     "\n",
     "newnew.size()"
    ]
