changed train to reflect generalization of path_dict()

--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -955,6 +955,178 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annot = pd.read_json('/Users/ianleefmans/Desktop/data/val/part3.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Images</th>\n",
+       "      <th>Questions</th>\n",
+       "      <th>Answers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>What shows subdural hematoma layering along th...</td>\n",
+       "      <td>non-contrast CT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Does non-contrast CT show subdural hematoma la...</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>What shows subdural hematoma layering along th...</td>\n",
+       "      <td>non-contrast CT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Does non-contrast CT show subdural hematoma la...</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>What shows subdural hematoma layering along th...</td>\n",
+       "      <td>non-contrast CT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9452</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>Is rim enhancement the classic description for...</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9453</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>What is also seen in a variety of fluid secret...</td>\n",
+       "      <td>this  cystic  solid morphology</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9454</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>What is this cystic and solid morphology of fl...</td>\n",
+       "      <td>also seen in a variety</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9455</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>Is this cystic and solid morphology also seen ...</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9456</th>\n",
+       "      <td>2400</td>\n",
+       "      <td>Is renal perenchyma also seen in a variety of ...</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9457 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Images                                          Questions  \\\n",
+       "0          2  What shows subdural hematoma layering along th...   \n",
+       "1          2  Does non-contrast CT show subdural hematoma la...   \n",
+       "2          3  What shows subdural hematoma layering along th...   \n",
+       "3          3  Does non-contrast CT show subdural hematoma la...   \n",
+       "4          4  What shows subdural hematoma layering along th...   \n",
+       "...      ...                                                ...   \n",
+       "9452    2400  Is rim enhancement the classic description for...   \n",
+       "9453    2400  What is also seen in a variety of fluid secret...   \n",
+       "9454    2400  What is this cystic and solid morphology of fl...   \n",
+       "9455    2400  Is this cystic and solid morphology also seen ...   \n",
+       "9456    2400  Is renal perenchyma also seen in a variety of ...   \n",
+       "\n",
+       "                             Answers  \n",
+       "0                    non-contrast CT  \n",
+       "1                                yes  \n",
+       "2                    non-contrast CT  \n",
+       "3                                yes  \n",
+       "4                    non-contrast CT  \n",
+       "...                              ...  \n",
+       "9452                              no  \n",
+       "9453  this  cystic  solid morphology  \n",
+       "9454          also seen in a variety  \n",
+       "9455                             yes  \n",
+       "9456                              no  \n",
+       "\n",
+       "[9457 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
